centered position, removed redundancies

--- a/Front End Libraries Projects/drum machine/src/App.scss
+++ b/Front End Libraries Projects/drum machine/src/App.scss
@@ -9,38 +9,24 @@
 ::after {
   margin: 0;
   padding: 0;
-  transition: all 1s;
   font-family: Inconsolata, sans-serif;
 }
 
 html {
   font-size: 62.5%;
-  height: 100vh;
-  width: 100vw;
-}
-
-body {
   font-size: 1rem;
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(29, 128, 85);
-  align-items: center;
-  width: 100%;
+  background-color: grey;
 }
-
 #drum-machine {
-  width: 300px;
+  transform: translateY(50%);
 }
-
 .drum-pad {
-  background-color: rgb(221, 137, 137);
+  background-color: #bbb;
   margin: 10px;
   cursor: pointer;
   font-size: 3rem;
   flex: 1 0 20%;
-  height: 110%;
   display: flex;
-  align-items: center;
   justify-content: center;
   box-shadow: 2px 3px 2px 2px rgba(0, 0, 0, 0.6);
   transition: all 0.1s;
@@ -59,25 +45,17 @@ body {
 }
 
 #drum-machine {
-  width: 100vw;
-  height: 50vh;
   display: flex;
-  justify-content: center;
-  align-content: stretch;
   #dummie {
     flex: 1;
   }
   #keys {
-    display: inline-block;
     flex-wrap: wrap;
-    width: 50wh;
-    height: 50px;
     display: flex;
-    flex-direction: row;
   }
   #display {
     flex: 1;
-    font-size: 4rem;
+    font-size: 3rem;
     padding: 15px 80px;
     display: flex;
     flex-direction: column;
@@ -85,7 +63,7 @@ body {
   }
 }
 
-.mystyle {
+.clicked {
   box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.6);
   background-color: rgb(191, 114, 114);
   box-shadow: none;
